@@ -18,7 +18,7 @@ package org.apache.solr.client.solrj.embedded;
 
 import java.io.File;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
 import java.util.Locale;
 import java.util.Random;
 import org.apache.http.Header;
@@ -89,7 +89,7 @@ public class JettyWebappTest extends SolrTestCaseJ4 {
   public void testAdminUI() throws Exception {
     // Not an extensive test, but it does connect to Solr and verify the Admin ui shows up.
     String adminPath = "http://127.0.0.1:" + port + "/solr/";
-    try (InputStream is = new URL(adminPath).openStream()) {
+    try (InputStream is = URI.create(adminPath).toURL().openStream()) {
       assertNotNull(is.readAllBytes()); // real error will be an exception
     }
 
